--- a/FindPlantNLRs.config
+++ b/FindPlantNLRs.config
@@ -5,7 +5,7 @@ meme: "{path/to/your}/meme/bin/mast"
 #Add path to meme.xml from NLR-Annotator
 meme_xml: "{path/to/your}/meme.xml"
 #Add path to braker.pl
-braker: "{path/to/your}/braker"
+braker: "{path/to/your}/BRAKER"
 #Add path to augustus script
 augustus: "{path/to/your/augustus}/scripts/gtf2gff.pl
 #Add path to Interproscan
