--- a/FindPlantNLRs.config
+++ b/FindPlantNLRs.config
@@ -1,7 +1,7 @@
 #Path to NLR-Annotator
 NLR-Annotator: "{path/to/your}/NLR-Annotator"
 #Add path to meme
-meme: "{path/to/your}/meme/bin/mast"
+meme: "{path/to/your/meme}/mast"
 #Add path to meme.xml from NLR-Annotator
 meme_xml: "{path/to/your}/meme.xml"
 #Add path to braker.pl
