--- a/FindPlantNLRs.config
+++ b/FindPlantNLRs.config
@@ -1,5 +1,7 @@
 #Path to NLR-Annotator
 NLR-Annotator: "{path/to/your}/NLR-Annotator"
+#Path to reference database
+ref: "{path/to/your/ref/fasta}"
 #Add path to meme
 meme: "{path/to/your/meme}/mast"
 #Add path to meme.xml from NLR-Annotator
