--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
+   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
   - aioeasywebdav=2.4.0=py36h5fab9bb_1001
   - aiohttp=3.7.4.post0=py36h8f6f2f9_0
@@ -20,6 +20,7 @@ dependencies:
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - bcrypt=3.2.0=py36h8f6f2f9_1
   - bedtools=2.30.0=h7d7f7ad_2
+  - binutils_impl_linux-64=2.36.1=h193b22a_2
   - blast=2.7.1=h4422958_6
   - boost=1.67.0=py36h3e44d54_0
   - boost-cpp=1.67.0=h3a22d5f_0
@@ -60,6 +61,10 @@ dependencies:
   - freetype=2.10.4=h0708190_1
   - fribidi=1.0.10=h36c2ea0_0
   - ftputil=5.0.1=pyhd8ed1ab_0
+  - gcc=11.2.0=h702ea55_2
+  - gcc_bootstrap_linux-64=11.2.0=h6cd0796_2
+  - gcc_bootstrap_linux-s390x=11.2.0=h15f7010_2
+  - gcc_impl_linux-64=11.2.0=h82a94d6_11
   - gdk-pixbuf=2.42.6=h04a7f16_0
   - gettext=0.19.8.1=h73d1719_1008
   - ghostscript=9.18=1
@@ -100,6 +105,7 @@ dependencies:
   - jpeg=9d=h36c2ea0_0
   - jsonschema=2.6.0=py36_1002
   - jupyter_core=4.8.1=py36h5fab9bb_0
+  - kernel-headers_linux-64=2.6.32=he073ed8_15
   - kiwisolver=1.3.1=py36h605e78d_1
   - krb5=1.16.3=hc83ff2d_1000
   - lcms2=2.12=hddcbb42_0
@@ -113,6 +119,7 @@ dependencies:
   - libedit=3.1.20170329=0
   - libffi=3.4.2=h9c3ff4c_4
   - libgcc=7.2.0=h69d50b8_2
+  - libgcc-devel_linux-64=11.2.0=h0952999_11
   - libgcc-ng=11.2.0=h1d223b6_11
   - libgfortran-ng=11.2.0=h69a702a_11
   - libgfortran5=11.2.0=h5c6108e_11
@@ -124,6 +131,7 @@ dependencies:
   - libpng=1.6.37=h21135ba_2
   - libprotobuf=3.18.0=h780b84a_1
   - librsvg=2.50.3=hfa39831_1
+  - libsanitizer=11.2.0=he4da1e4_11
   - libsodium=1.0.18=h36c2ea0_1
   - libssh2=1.8.0=h1ad7b7a_1003
   - libstdcxx-ng=11.2.0=he4da1e4_11
@@ -209,6 +217,7 @@ dependencies:
   - sqlite=3.20.1=2
   - stone=3.2.1=pyhd8ed1ab_0
   - stopit=1.1.2=py_0
+  - sysroot_linux-64=2.12=he073ed8_15
   - tabulate=0.8.9=pyhd8ed1ab_0
   - tk=8.6.11=h27826a3_1
   - toml=0.10.2=pyhd8ed1ab_0
