--- a/FindPlantNLRs.config
+++ b/FindPlantNLRs.config
@@ -9,6 +9,6 @@ meme_xml: "{path/to/your}/meme.xml"
 #Add path to braker.pl
 braker: "{path/to/your}/BRAKER"
 #Add path to augustus script
-augustus: "{path/to/your/augustus}/scripts/gtf2gff.pl"
+augustus: "{path/to/your/augustus}/scripts"
 #Add path to Interproscan
 interproscan: "{path/to/your/interproscan}/interproscan.sh"
