--- a/FindPlantNLRs.config
+++ b/FindPlantNLRs.config
@@ -1,14 +1,8 @@
-#Path to NLR-Annotator
-NLR-Annotator: "{path/to/your}/NLR-Annotator"
-#Path to reference database
-ref: "{path/to/your/ref/fasta}"
-#Add path to meme
-meme: "{path/to/your/meme}/mast"
-#Add path to meme.xml from NLR-Annotator
-meme_xml: "{path/to/your}/meme.xml"
-#Add path to braker.pl
-braker: "{path/to/your}/BRAKER"
-#Add path to augustus script
-augustus: "{path/to/your/augustus}/scripts"
-#Add path to Interproscan
-interproscan: "{path/to/your/interproscan}/interproscan.sh"
+NLR-Annotator: "/home/NLR-Annotator"
+ref: "/home/FindPlantNLRs/ref_db/ref.fasta"
+meme: "/opt/conda/envs/FindPlantsNLR/bin/mast"
+meme_xml: "/home/meme.xml"
+braker: "/opt/conda/envs/AnnotatePlantsNLR/bin"
+augustus: "/opt/conda/envs/AnnotatePlantsNLR/bin/gtf2gff.pl"
+interproscan: "/home/interproscan/"
+blast_threads: "12"
