--- a/FindPlantNLRs.config
+++ b/FindPlantNLRs.config
@@ -4,5 +4,5 @@ meme: "/opt/conda/envs/FindPlantsNLR/bin/mast"
 meme_xml: "/home/meme.xml"
 braker: "/opt/conda/envs/AnnotatePlantsNLR/bin"
 augustus: "/opt/conda/envs/AnnotatePlantsNLR/bin/gtf2gff.pl"
-interproscan: "/home/interproscan/"
+interproscan: "/home/interproscan/interproscan.sh"
 blast_threads: "12"
