--- a/FindPlantNLRs.config
+++ b/FindPlantNLRs.config
@@ -6,9 +6,9 @@ ref: "{path/to/your/ref/fasta}"
 meme: "{path/to/your/meme}/mast"
 #Add path to meme.xml from NLR-Annotator
 meme_xml: "{path/to/your}/meme.xml"
-#Add path to braker.pl
-braker: "{path/to/your}/BRAKER"
-#Add path to augustus script
-augustus: "{path/to/your/augustus}/scripts"
+#Add path to braker3.sif singularity image
+braker: "{path/to/your}/braker3.sif"
 #Add path to Interproscan
 interproscan: "{path/to/your/interproscan}/interproscan.sh"
+#Set threads use for braker3 and interproscan, default is 18
+CPUs: "18"
